# dastyaar

./: .env  .gitignore  JAMIEMAN  README.md  compose.yaml  engin.py  filebase_schema.sql  flaskrunner.py  formattedoutput.py  genmodels.py  ingestionplan.txt  intro_text.txt  jamieman2024  jennifer  knowthreads.txt  main.py  models.py  newmodels.py  notes.txt  oldman.py  output.txt  postgresql_schema.sql  pyproject.toml  reporter.py  requirements.txt  run_file_revamp.py  run_voice_upload.py  settings.py  sqliteinterface.py  tenman.py  testex.py  testqldocked.txt  testtext.txt  timidmanjames
docker/: Dockerfile
docker stuff/: gmancompose.yaml
flask/: app.py  console.py  oldconsole.py
flask_app/: app.py  console.py  newapp.py
learningalch/: anewway.py  enginetests.py  metatest.py
mac_client/: aicost.py  audio_recording.py  collection_ingestor.py  console.py  deploy.sh  dictation.py  file_cm_time.py  file_transfer.py  generate_random_files.py  gunicorner.sh  ingest.py  ingest_flows.py  ingestor.py  jsconsole.html  old_ingest_flows.py  pending_to_ingest.py  read_filebase.py  sqliteinterface.py  testman.py  theroutine.txt  transfer_pending_to_intake.py
oldies/: newsessions.py  oldmodels.py
server/: binarydemo.py  console.py  console_plus_file_transfer.py  file_functions.py  file_transfer.py  filebase_schema.txt  filebase_test-2025-06-16.db  ingest.py  jamesviewai.py  jameswebb.py  old_console_plus_file_transfer.py  openai_base.py  openai_generic.py  read_filebase.py  readalloutline.txt  settings.py  sqliteinterface.py  testai.py  testgooglemaps.py  upsert.py  (+2 more)
(+118 files in other folders)
