[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dastyar"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
# dependencies = ["..."]  # add runtime deps here if you have any

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dastyar*"]   # picks up dastyar and subpackages
